# Changelog
- Benchmarking with hyperfine has now been fixed.

@uttarayan21 has added:
- Shell argument auto-completion for bash and fish.